unpackaged/main/default/objects/EventApi__Event_Status_Page__c/EventApi__Event_Status_Page__c.object-meta.xml
<CustomObject>
    <description>Dictates which pages show on the event based on the event&#39;s status.</description>
    <label>Event Status Page</label>
    <nameField>
        <displayFormat>ESP-{0000000}</displayFormat>
        <label>Event Status Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Status Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>