unpackaged/main/default/objects/EventApi__Event_Status_Page__c/fields/EventApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
    <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>