unpackaged/main/default/objects/EventApi__Event_Status_Page__c/fields/EventApi__Event_Page__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Page__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>** REQUIRED ** Linked to the related event page.</description>
    <inlineHelpText>** REQUIRED ** Linked to the related event page.</inlineHelpText>
    <label>Event Page</label>
    <referenceTo>EventApi__Event_Page__c</referenceTo>
    <relationshipLabel>Event Status Pages</relationshipLabel>
    <relationshipName>Event_Status_Pages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>