unpackaged/main/default/objects/EventApi__Event_Status_Page__c/fields/EventApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the page becomes visible on the related event.</description>
    <inlineHelpText>When checked, the page becomes visible on the related event.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>