unpackaged/main/default/objects/EventApi__Event_Status_Page__c/fields/EventApi__Required_Ticket_Types__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Required_Ticket_Types__c</fullName>
    <description>Comma separated list of Ticket Types required to be considered see Event Page.</description>
    <inlineHelpText>Comma separated list of Tickets Types required to be considered see Event Page.</inlineHelpText>
    <label>Required Ticket Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>